# ChangeLog for kde-misc/filelight
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.27 2008/06/29 16:05:23 carlo Exp $

*filelight-1.0-r1 (29 Jun 2008)

  29 Jun 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/filelight-1.0-desktop-entry-fix.diff, +filelight-1.0-r1.ebuild:
  Merge i18n stuff, get rid of arts use flag, fix desktop entry properly.

  14 Nov 2007; Tobias Heinlein <keytoaster@gentoo.org> filelight-1.0.ebuild:
  amd64 stable, bug #194745

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  filelight-1.0.ebuild:
  ppc stable, bug #194745

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org> filelight-1.0.ebuild:
  sparc stable wrt #194745

  05 Oct 2007; Christian Faulhammer <opfer@gentoo.org> filelight-1.0.ebuild:
  stable x86, bug 194745

  05 Oct 2007; Jeroen Roovers <jer@gentoo.org> filelight-1.0.ebuild:
  Stable for HPPA (bug #194745).

  20 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org> filelight-1.0.ebuild:
  Corrected desktop entry. Fixes bug 189551.

  24 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org> filelight-1.0.ebuild:
  Added a post-install message about localisation support being available via
  kde-misc/filelight-i18n.

  23 Feb 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  filelight-1.0_rc2.ebuild, filelight-1.0.ebuild:
  Add x11-apps/xdpyinfo runtime dependency, thanks to Flameeyes for pointing out

  04 Feb 2007; Przemysław Maciąg <troll@gentoo.org>
  filelight-1.0_rc2.ebuild:
  Desktop file fix

*filelight-1.0 (04 Feb 2007)

  04 Feb 2007; Przemysław Maciąg <troll@gentoo.org>
  -files/filelight-1.0_beta6-pic.patch, -filelight-1.0_beta6.ebuild,
  -filelight-1.0_rc1.ebuild, +filelight-1.0.ebuild:
  Version bump (1.0). Desktop file fix from Andrej Kacian (#165149). Removed
  eutils from inherited eclasses. Deleted old ebuild.

  29 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  filelight-1.0_rc2.ebuild:
  Add ~x86-fbsd keyword.
