@@ -1,7 +1,7 @@
 AUX filelight-1.0-desktop-entry-fix.diff 739 RMD160 c9c11420351a184224d500225f750ddc6257256f SHA1 36a32f5ad821e61ece6e09028ffabc6eb59b6233 SHA256 55a048d94997372916f0992ba8cd3081f10a1cb618a2589cb323bfa1c507b825
 DIST filelight-1.0-i18n-20070422.tar.bz2 986141 RMD160 e676c7c208123b2209514d3b9406540533103715 SHA1 1f50270d851ae7578b696f1e9737be82ad06a424 SHA256 1c3b973b3dc70e08a83990a737afd15aa653029202270992940b2a23705f02fc
 DIST filelight-1.0.tar.bz2 530449 RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e SHA1 2a4644c598dfcc408af0af65e655e2525494708d SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6
-EBUILD filelight-1.0-r1.ebuild 1888 RMD160 5bf1804968755f2371f11cdc2fef1bcdef091d33 SHA1 2b4a3f5216438153a0d246b8d90a73f4a0cd3a44 SHA256 c88952fdb5bd4c7c328bf314810ae930c47089cc4e542e9bc12ff93c9e993511
+EBUILD filelight-1.0-r1.ebuild 1888 RMD160 c76e198b3cd5f4201f659af70e4ac844cbea883a SHA1 511382c49d5e24ea1be5520856a8c3878d30f7df SHA256 1712a7005b13f5e2f2382132f828fdd734cb4daa7b7aec6a670da2069a44ea67
 EBUILD filelight-1.0.ebuild 893 RMD160 b995bf0f8553a6c34ad062b5c6a58cd08a170f91 SHA1 aab2e836ea33594af1638524f4902c5b3ab19c41 SHA256 ec351cdc5d84624f0dd5128edeb5742a4faf6090f6de5b034498b472b5d36fea
-MISC ChangeLog 5595 RMD160 2f013042e444ffd9789b6b820331ffe204114cba SHA1 757bca18cdedab65adf45fbd3fa62add5be336c1 SHA256 aea2d2df98272856d5e1da7f9ac6879618484914a32b39e08fde9ee78fa0addf
+MISC ChangeLog 5685 RMD160 607af9bb56956bf3b1a0e364dac496fbec105809 SHA1 6eccf61fa836433604319e017052ef15d9674575 SHA256 03e2c7a1c95d26d7bdaf323687655367b75248d8c1af94b374b17652392c588c
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
