@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/filelight
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.27 2008/06/29 16:05:23 carlo Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.28 2009/07/19 12:21:45 nixnut Exp $
+
+  19 Jul 2009; nixnut <nixnut@gentoo.org> filelight-1.0-r1.ebuild:
+  ppc stable #278150
 
 *filelight-1.0-r1 (29 Jun 2008)
 
